# College

./: .gitignore
AI-ML/: NQueen.py  csp.md  open_data_intl.csv
AI-ML/15-slide-puzzle/: main.ipynb  pyproject.toml
AI-ML/CryptArithmetic/: algorithms_explained.md
AI-ML/SearchInAI/: bfsTrace.py  tictactoe_bfs.py  tictactoe_dfs.py
AI-ML/WaterJug/: waterjug.py  waterjug_with_problem.py
AI-ML/lab2/: NQueen.py  problem_solving_report.tex
AI-ML/snake_game/: README.md  path-findiing.py  (+1 more)
DBMS/: DBMS_Lab_Template.docx  basicSelect.sql  populate.sql  tableVarsAndSetOp.sql
OS/: CHECKLIST.md  LAB_REPORT.md  build_all.sh
Python-Class/: README.md  assingment.md  pyproject.toml
Python-Class/.ipynb_checkpoints/: basics-checkpoint.ipynb
Python-Class/DataScience/numpyTuto/: SingelDimNumPyArray.md  initial.ipynb
Python-Class/DataScience/numpyTuto/.ipynb_checkpoints/: initial-checkpoint.ipynb
Python-Class/House_Price_Prediction/: README.md  housing_price_predication.ipynb  pyproject.toml  requirements.txt
Python-Class/House_Price_Prediction/.ipynb_checkpoints/: housing_price_predication-checkpoint.ipynb
Python-Class/House_Price_Prediction/ML_model/: linear_regression.pkl
Python-Class/InitialsDay/: Day4.py  LinearQ.py  Linearq.ipynb  Listsss.py  basics.ipynb  krishom.ipynb  lambaFunc.py  simpleAndCompound.py
Python-Class/Pandas/: pandas1.ipynb  pandas2.ipynb  used_cars.ipynb
Python-Class/Pandas/datasets/: student.csv  student.xlsx
Python-Class/beautifuLSOUP/: main.ipynb
Python-Class/height_weight/: main.ipynb  main.py  pyproject.toml
Python-Class/height_weight/.ipynb_checkpoints/: main-checkpoint.ipynb
TOC/: DFA.c  DFA2.C
(+102 files in other folders)
