[project]
name = "python-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fireducks>=1.3.2",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]
