[project]
name = "house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.7.0",
    "fireducks>=1.3.3",
    "ipykernel>=6.30.0",
    "jax>=0.7.0",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
