[project]
name = "height-weight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fireducks>=1.3.3",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.7.1",
]
